Replace constructor with builder.